--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ subprojects {
         implementation 'org.springframework.boot:spring-boot-starter'
         implementation 'org.springframework.boot:spring-boot-starter-validation'
         implementation 'org.springframework.boot:spring-boot-starter-aop' // AOP: 로깅 처리 자동화를 위해 사용
-
+        implementation 'org.springframework.boot:spring-boot-starter-actuator'
         // Utils
         implementation 'com.google.code.gson:gson'
 
@@ -89,6 +89,8 @@ configure(subprojects.findAll { !it.name.endsWith('-biz') && it.name != 'common'
 
         // WebFlux for WebMvc Testing
         implementation 'org.springframework.boot:spring-boot-starter-webflux'
+        implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
     }
 }
 
